Bug #47281 ( is limited in size of characters).  Also remove redundant code line.